--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/marked": "^4.0.7",
     "daisyui": "^2.27.0",
+    "lodash.debounce": "^4.0.8",
+    "marked": "^4.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-split": "^2.0.14",
+    "react-textarea-autosize": "^8.3.4",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
