--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-split": "^2.0.14",
     "react-textarea-autosize": "^8.3.4",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
