--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "uvu": "^0.5.6"
   },
   "ct3aMetadata": {
     "initVersion": "5.10.3"
