--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "18.2.0",
     "react-split": "^2.0.14",
     "react-textarea-autosize": "^8.3.4",
@@ -31,6 +32,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
