--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@heroicons/react": "^2.0.11",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "4.3.1",
+    "@tanstack/react-query": "^4.7.1",
+    "@trpc/client": "^10.0.0-proxy-beta.8",
+    "@trpc/next": "^10.0.0-proxy-beta.8",
+    "@trpc/react": "^10.0.0-proxy-beta.8",
+    "@trpc/server": "^10.0.0-proxy-beta.8",
     "@types/lodash.debounce": "^4.0.7",
     "@types/marked": "^4.0.7",
     "daisyui": "^2.27.0",
